--- a/src/index.html
+++ b/src/index.html
@@ -237,15 +237,15 @@
       <div class="row no-gutters">
         <div class="col-12 col-lg-6" aria-label="News & Events">
           <div class="p-4 mt-4 mr-lg-3 bg-white news">
-            <div class="text-primary mb-4 title">News &amp; events</div>
+            <h1 class="text-primary mb-4 title">News &amp; events</h1>
             <div class="media mt-4">
               <img class="my-1 mr-2 rounded-right" src="./img/iceberg.jpg" />
               <div class="media-body">
-                <div class="text-info mt-0 mb-2 subtitle">
+                <h2 class="text-info mt-0 mb-2 subtitle">
                   <a href="./article.html" role="button"
                     >Global temperature record</a
                   >
-                </div>
+                </h2>
                 <p>
                   The global surface temperature relative to 1951-1980 average
                   recently published by NASA shows that 2016 ranks as the
@@ -259,11 +259,11 @@
             <div class="media mt-4">
               <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg" />
               <div class="media-body">
-                <div class="text-info mt-0 mb-2 subtitle">
+                <h2 class="text-info mt-0 mb-2 subtitle">
                   <a href="./empty.html?title=Article" role="button"
                     >At iam decimum annum in spelunca iacet</a
                   >
-                </div>
+                </h2>
                 <p>
                   Immo vero, inquit, ad beatissime vivendum parum est, ad beate
                   vero satis. Claudii libidini, qui tum erat summo ne imperio,
@@ -278,11 +278,11 @@
             <div class="media mt-4">
               <img class="my-1 mr-2 rounded-right" src="./img/robots.jpg" />
               <div class="media-body">
-                <div class="text-info mt-0 mb-2 subtitle">
+                <h2 class="text-info mt-0 mb-2 subtitle">
                   <a href="./empty.html?title=Article" role="button"
                     >Quo plebiscito decreta a senatu est consuli quaestio Cn</a
                   >
-                </div>
+                </h2>
                 <p>
                   Comprehensum, quod cognitum non habet? Quia nec honesto quic
                   quam honestius nec turpi turpius. Maximeque eos videre
@@ -297,10 +297,10 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-6" aria-label="Studies">
+        <aside class="col-12 col-lg-6" aria-label="Studies">
           <div class="p-4 mt-4 bg-white studies">
-            <div class="text-primary mb-4 title">Studies</div>
-            <p class="font-weight-bold">Advance your scientific education</p>
+            <h1 class="text-primary mb-4 title">Studies</h1>
+            <h2 class="subtitle">Advance your scientific education</h2>
             <div class="list-unstyled ml-3">
               <p>
                 <a href="./empty.html?title=Bachelor" role="button"
@@ -321,14 +321,14 @@
           </div>
 
           <div class="p-4 mt-4 bg-white researches" aria-label="Researches">
-            <div class="text-primary mb-4 title">Researches</div>
-            <p class="font-weight-bold">Join our renowned research groups</p>
+            <h1 class="text-primary mb-4 title">Researches</h1>
+            <h2 class="subtitle">Join our renowned research groups</h2>
             <p class="ml-3">
               <a href="./empty.html?title=Doctorate" role="button"
                 >Doctoral programmes</a
               >
             </p>
-            <p class="font-weight-bold">Latest publications</p>
+            <h2 class="subtitle">Latest publications</h2>
             <div class="list-unstyled ml-3">
               <p>
                 <a href="./empty.html?title=Article" role="button"
@@ -361,7 +361,7 @@
               </p>
             </div>
           </div>
-        </div>
+        </aside>
       </div>
     </main>
 
