--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
       </div>
     </header>
 
-    <nav class="container-fluid bg-dark nav" role="navigation">
+    <nav class="container-fluid bg-dark nav" role="navigation" aria-label="mainnav">
       <div class="container">
         <div class="navbar navbar-dark bg-dark navbar-expand-lg px-0">
           <div class="navbar-brand d-lg-none">
@@ -67,140 +67,143 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="nav-bar-content">
-            <div class="navbar-nav mr-auto">
-              <div class="nav-item">
-                <a class="nav-link" href="./" role="button">Homepage</a>
-              </div>
-              <div class="nav-item dropdown">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" aria-haspopup="false" href="./" role="button">Homepage</a>
+              </li>
+              <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
+                  aria-haspopup="true"
                   id="nav-bar-faculties"
                   role="button"
                   >Faculties</a
                 >
-                <div class="dropdown-menu">
-                  <div>
+                <ul class="dropdown-menu">
+                  <li>
                     <a
                       class="dropdown-item"
                       href="./empty.html?title=Applied+sciences"
                       role="button"
                       >Applied sciences</a
                     >
-                  </div>
-                  <div>
+                  </li>
+                  <li>
                     <a
                       class="dropdown-item"
                       href="./empty.html?title=Architecture+%26+planning"
                       role="button"
                       >Architecture &amp; planning</a
                     >
-                  </div>
-                  <div>
+                  </li>
+                  <li>
                     <a
                       class="dropdown-item"
                       href="./empty.html?title=Construction+%26+environment"
                       role="button"
                       >Construction &amp; environment</a
                     >
-                  </div>
-                  <div>
+                  </li>
+                  <li>
                     <a
                       class="dropdown-item"
                       href="./empty.html?title=Engineering"
                       role="button"
                       >Engineering</a
                     >
-                  </div>
-                  <div>
+                  </li>
+                  <li>
                     <a
                       class="dropdown-item"
                       href="./empty.html?title=Health+%26+social+sciences"
                       role="button"
                       >Health &amp; social sciences</a
                     >
-                  </div>
-                </div>
-              </div>
-              <div class="nav-item dropdown">
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
+                  aria-haspopup="true"
                   id="nav-bar-education"
                   role="button"
                   >Education &amp; research</a
                 >
-                <div class="dropdown-menu">
-                  <div>
+                <ul class="dropdown-menu">
+                  <li>
                     <a
                       class="dropdown-item"
                       href="./empty.html?title=Bachelor"
                       role="button"
                       >Bachelor</a
                     >
-                  </div>
-                  <div>
+                  </li>
+                  <li>
                     <a
                       class="dropdown-item"
                       href="./empty.html?title=Master"
                       role="button"
                       >Master</a
                     >
-                  </div>
-                  <div>
+                  </li>
+                  <li>
                     <a
                       class="dropdown-item"
                       href="./empty.html?title=Continuing+education"
                       role="button"
                       >Continuing education</a
                     >
-                  </div>
-                  <div>
+                  </li>
+                  <li>
                     <a
                       class="dropdown-item"
                       href="./empty.html?title=Doctorate"
                       role="button"
                       >Doctorate</a
                     >
-                  </div>
-                </div>
-              </div>
-              <div class="nav-item dropdown">
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
                   href="#"
+                  aria-haspopup="true"
                   id="nav-bar-industry"
                   role="button"
                   >Industry &amp; partners</a
                 >
-                <div class="dropdown-menu">
-                  <div>
+                <ul class="dropdown-menu">
+                  <li>
                     <a
                       class="dropdown-item"
                       href="./empty.html?title=Public+relations"
                       role="button"
                       >Public relations</a
                     >
-                  </div>
-                  <div>
+                  </li>
+                  <li>
                     <a
                       class="dropdown-item"
                       href="./empty.html?title=Commercialization"
                       role="button"
                       >Commercialization</a
                     >
-                  </div>
-                  <div>
+                  </li>
+                  <li>
                     <a
                       class="dropdown-item"
                       href="./empty.html?title=Sponsors+%26+partners"
                       role="button"
                       >Sponsors &amp; partners</a
                     >
-                  </div>
-                </div>
-              </div>
-            </div>
+                  </li>
+                </ul>
+              </li>
+            </ul>
             <div class="navbar-nav">
               <div class="nav-item">
                 <a class="nav-link" href="./login.html" role="button">Login</a>
