#4 implement skip link to main content

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 
   <body class="d-flex flex-column bg-light">
     <header class="container-fluid d-none d-lg-block my-4 header" role="banner">
+      <a href="#main" class="sr-only sr-only-focusable">Skip to main content</a>
       <div class="container">
         <div class="row no-gutters">
           <div class="col-8 media">
