#6 fixes webstorm warnings in article.html

--- a/src/article.html
+++ b/src/article.html
@@ -266,9 +266,10 @@
                     <caption>
                         <p>Average Global Temperature by Century and Year</p>
                     </caption>
-                    <col>
-                    <col>
-                    <colgroup span="2"></colgroup>
+                    <colgroup span="2">
+                        <col>
+                        <col>
+                    </colgroup>
                     <thead>
                         <tr>
                             <th class="align-middle" scope="colgroup" rowspan="2">Century</th>
@@ -367,8 +368,4 @@
     <script type="text/javascript" src="./js/common.js"></script>
     <script type="text/javascript" src="./js/article.js"></script>
 </body>
-</body>
-
-  </body>
-
 </html>
