main tag close fixed

--- a/src/login.html
+++ b/src/login.html
@@ -308,8 +308,7 @@
 
         <section
           class="col-12 col-md-7 mt-4 register"
-          aria-label="Create new account"
-        >
+          aria-label="Create new account">
           <div class="p-4 bg-white">
             <h1 class="text-primary mb-4 title">Create new account</h1>
             <h2 class="text-danger mb-4 d-none subtitle" id="register-error">
@@ -463,10 +462,10 @@
                 </button>
               </form>
             </div>
-          </section>
-        </div>
+          </div>
+        </section>
       </div>
-    </div>
+    </main>
 
     <footer class="container-fluid bg-dark mt-4 footer" role="contentinfo">
       <div class="container text-center py-3">
