--- a/src/index.html
+++ b/src/index.html
@@ -270,7 +270,7 @@
             <article class="media mt-4" aria-labelledby="At-iam-decimum-title">
               <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg" alt="Image of the Milky Way"/>
               <div class="media-body">
-                <h2 class="text-info mt-0 mb-2 subtitle" id="At-iam-decimum-title-title">
+                <h2 class="text-info mt-0 mb-2 subtitle" id="At-iam-decimum-title">
                   <a href="./empty.html?title=Article" role="button"
                     >At iam decimum annum in spelunca iacet</a
                   >
