--- a/src/article.html
+++ b/src/article.html
@@ -242,9 +242,9 @@
 
     <main class="container mt-4 main" id="main" role="main">
       <div class="p-5 bg-white">
-        <div class="text-primary text-center mb-4 title">
+        <h1 class="text-primary text-center mb-4 title">
           Global temperature record shows 2016 as the warmest year on record
-        </div>
+        </h1>
         <div class="text-center wrapper">
           <img src="./img/temperature.jpg" class="figure-img img-fluid"  alt="Line chart of the global Mean Temprature" aria-describedby="temprature-description"/>
           <p  id="temprature-description" class="figure-caption text-center px-5">
