--- a/src/login.html
+++ b/src/login.html
@@ -35,14 +35,14 @@
                 <button
                   class="btn btn-dark font-increase-button"
                   id="font-increase-button"
-                  aria-label="Increase font size"
+                  aria-label="Increase font size for desktop view"
                 >
                   A+
                 </button>
                 <button
                   class="btn btn-dark font-decrease-button"
                   id="font-decrease-button"
-                  aria-label="Decrease font size"
+                  aria-label="Decrease font size for desktop view"
                 >
                   A-
                 </button>
@@ -65,7 +65,7 @@
               alt="Logo"
             />
           </div>
-          <button class="navbar-toggler" type="button">
+          <button class="navbar-toggler" type="button" aria-label="navbar toggler">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="nav-bar-content">
@@ -220,18 +220,18 @@
           <div class="btn-toolbar justify-content-end">
             <div class="btn-group btn-group-sm">
               <button
-                class="btn btn-dark text-white font-increase-button"
+                class="btn btn-light text-black font-increase-button"
                 id="font-increase-button-1"
                 role="button"
-                aria-label="Increase font size"
+                aria-label="Increase font size for mobile view"
               >
                 A+
               </button>
               <button
-                class="btn btn-dark text-white font-decrease-button"
+                class="btn btn-light text-black font-decrease-button"
                 id="font-decrease-button-1"
                 role="button"
-                aria-label="Decrease font size"
+                aria-label="Decrease font size for mobile view"
               >
                 A-
               </button>
