upgrade image description for milky way.

--- a/src/index.html
+++ b/src/index.html
@@ -268,7 +268,7 @@
               </div>
             </article>
             <article class="media mt-4" aria-labelledby="At-iam-decimum-title">
-              <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg" alt="Image of the Milky Way"/>
+              <img class="my-1 mr-2 rounded-right" src="./img/universe.jpg" alt="Photo of the milky way galaxy"/>
               <div class="media-body">
                 <h2 class="text-info mt-0 mb-2 subtitle" id="At-iam-decimum-title">
                   <a href="./empty.html?title=Article" role="button"
