ex7 fixes typos and adds clear label to logo

--- a/src/article.html
+++ b/src/article.html
@@ -246,12 +246,12 @@
           Global temperature record shows 2016 as the warmest year on record
         </h1>
         <div class="text-center wrapper">
-          <img src="./img/temperature.jpg" class="figure-img img-fluid"  alt="Line chart of the global Mean Temprature" aria-describedby="temprature-description"/>
+          <img src="./img/temperature.jpg" class="figure-img img-fluid"  alt="Line chart of the global Mean Temperature" aria-describedby="temprature-description"/>
           <p  id="temprature-description" class="figure-caption text-center px-5">
             The graphic shows the global mean surface temperature change since
             1880 till nowadays. The grey curve indicates the annual average
             temperature and the black curve shows the smoothed result. Over the
-            last two centuries, the mean tempurature has increased by around 1
+            last two centuries, the mean temperature has increased by around 1
             degree Celcius.
           </p>
         </div>
@@ -367,5 +367,5 @@
     <script type="text/javascript" src="./js/bootstrap.js"></script>
     <script type="text/javascript" src="./js/common.js"></script>
     <script type="text/javascript" src="./js/article.js"></script>
-</body>
+  </body>
 </html>
