--- a/src/login.html
+++ b/src/login.html
@@ -62,7 +62,7 @@
               src="./img/logo.jpg"
               width="40"
               height="40"
-              alt="Logo"
+              alt="Logo of the Institute"
             />
           </div>
           <button
@@ -291,7 +291,7 @@
                 <p style="position: relative; top: -60px">Password</p>
                 <small class="login-password-error"></small>
               </div>
-              <div class="form-group">
+              <div class="form-gr oup">
                 <div class="form-check">
                   <label class="form-check-label">
                     <input
