--- a/src/login.html
+++ b/src/login.html
@@ -253,47 +253,50 @@
 
     <main class="container main" id="main" role="main">
       <div class="row no-gutters">
-        <section class="col-12 col-md-5 mt-4 login" aria-label="Login">
+        <div class="col-12 col-md-5 mt-4 login">
           <div class="p-4 mr-md-3 bg-white">
-            <h1 class="text-primary mb-4 title">Login</h1>
-            <h2 class="text-danger mb-4 d-none subtitle" id="login-error">
+            <div class="text-primary title">Login</div>
+            <div class="text-danger d-none subtitle" id="login-error">
               Please correct the error(s)
-            </h2>
-            <ul class="sr-only" id="login-error-list"></ul>
-            <form id="login-form" novalidate>
-              <div class="form-group">
-                <input
-                  class="form-control"
-                  id="login-email-control"
-                  type="email"
-                  name="email"
-                  aria-label="email"
-                  placeholder="Email"
-                  aria-required="true"
-                  required
-                  style="position: relative; top: 10px"
-                />
-                <p style="position: relative; top: -60px">Email</p>
-                <small id="login-email-error"></small>
-              </div>
-              <div class="form-group">
-                <input
-                  class="form-control"
-                  id="login-password-control"
-                  type="password"
-                  name="password"
-                  aria-label="password"
-                  placeholder="Password"
-                  aria-required="true"
-                  required
-                  style="position: relative; top: 10px"
-                />
-                <p style="position: relative; top: -60px">Password</p>
-                <small class="login-password-error"></small>
-              </div>
-              <div class="form-gr oup">
-                <div class="form-check">
-                  <label class="form-check-label">
+            </div>
+            <div class="mt-4">
+              <ul class="sr-only" id="login-error-list"></ul>
+              <form id="login-form" novalidate>
+                <div class="form-group">
+                  <input
+                    class="form-control"
+                    id="login-email-control"
+                    type="email"
+                    name="email"
+                    aria-label="email"
+                    placeholder="Email"
+                    aria-required="true"
+                    required
+                    style="top: 10px"
+                  />
+                  <label style="position: relative; top: -60px">Email</label>
+                  <small
+                    style="position: absolute; left: 30px"
+                    id="login-email-error"
+                  ></small>
+                </div>
+                <div class="form-group" style="display: block">
+                  <input
+                    class="form-control"
+                    id="login-password-control"
+                    type="password"
+                    name="password"
+                    aria-label="password"
+                    placeholder="Password"
+                    aria-required="true"
+                    required
+                    style="top: 10px"
+                  />
+                  <label style="position: relative; top: -60px">Password</label>
+                  <small class="login-password-error"></small>
+                </div>
+                <div class="form-group">
+                  <div class="form-check">
                     <input
                       class="form-check-input"
                       type="checkbox"
@@ -302,37 +305,34 @@
                       value="remember"
                       id="login-remmeber-control"
                     />
-                    Keep me logged in
-                  </label>
+                    <label class="form-check-label">Keep me logged in</label>
+                  </div>
                 </div>
-              </div>
-              <button
-                class="btn btn-primary"
-                id="login-login-button"
-                type="submit"
-              >
-                Login
-              </button>
-              <button
-                class="btn btn-link text-danger ml-3"
-                id="login-forgot-button"
-                type="button"
-              >
-                Forgot password
-              </button>
-            </form>
+                <button
+                  class="btn btn-primary"
+                  id="login-login-button"
+                  type="submit"
+                >
+                  Login
+                </button>
+                <button
+                  class="btn btn-link text-danger ml-3"
+                  id="login-forgot-button"
+                  type="button"
+                >
+                  Forgot password
+                </button>
+              </form>
+            </div>
           </div>
-        </section>
+        </div>
 
-        <section
-          class="col-12 col-md-7 mt-4 register"
-          aria-label="Create new account"
-        >
+        <div class="col-12 col-md-7 mt-4 register">
           <div class="p-4 bg-white">
-            <h1 class="text-primary mb-4 title">Create new account</h1>
-            <h2 class="text-danger mb-4 d-none subtitle" id="register-error">
+            <div class="text-primary mb-4 title">Create new account</div>
+            <div class="text-danger mb-4 d-none subtitle" id="register-error">
               Please correct the error(s)
-            </h2>
+            </div>
             <ul class="sr-only" id="register-error-list"></ul>
             <div>
               <form id="register-form" novalidate>
@@ -343,95 +343,85 @@
                   </legend>
                   <div class="form-row">
                     <div class="form-group col-12 col-lg-6">
-                      <label>
-                        First name
-                        <input
-                          class="form-control"
-                          type="text"
-                          name="firstName"
-                          aria-label="firstName"
-                          id="register-first-name-control"
-                          placeholder="First name"
-                          aria-required="true"
-                          required
-                        />
-                        <small class="signup-fn-error"></small>
-                      </label>
+                      <label>First name</label>
+                      <input
+                        class="form-control"
+                        type="text"
+                        name="firstName"
+                        aria-label="firstName"
+                        id="register-first-name-control"
+                        placeholder="First name"
+                        aria-required="true"
+                        required
+                      />
+                      <small class="signup-fn-error"></small>
                     </div>
                     <div class="form-group col-12 col-lg-6">
-                      <label>
-                        Last name
-                        <input
-                          class="form-control"
-                          type="text"
-                          name="lastName"
-                          aria-label="lastName"
-                          id="register-last-name-control"
-                          placeholder="Last name"
-                          aria-required="true"
-                          required
-                        />
-                        <small class="signup-ln-error"></small>
-                      </label>
+                      <label>Last name</label>
+                      <input
+                        class="form-control"
+                        type="text"
+                        name="lastName"
+                        aria-label="lastName"
+                        id="register-last-name-control"
+                        placeholder="Last name"
+                        aria-required="true"
+                        required
+                      />
+                      <small class="signup-ln-error"></small>
                     </div>
                   </div>
                   <div class="form-group">
-                    <label>
-                      Email
-                      <input
-                        class="form-control"
-                        id="register-email-control"
-                        type="email"
-                        name="email"
-                        aria-label="email"
-                        placeholder="Email"
-                        aria-required="true"
-                        required
-                      />
-                      <small class="signup-email-error"></small>
-                    </label>
+                    <label>Email</label>
+                    <input
+                      class="form-control"
+                      id="register-email-control"
+                      type="email"
+                      name="email"
+                      aria-label="email"
+                      placeholder="Email"
+                      aria-required="true"
+                      required
+                    />
+                    <small class="signup-email-error"></small>
                   </div>
                   <div class="form-group">
-                    <label>
-                      Password
-                      <input
-                        class="form-control"
-                        id="register-password-control"
-                        type="password"
-                        name="password"
-                        aria-label="password"
-                        placeholder="Password"
-                        aria-required="true"
-                        required
-                      />
-                      <small class="signup-password-error"></small>
-                      <small
-                        id="register-password-help"
-                        class="form-text text-muted"
-                        >Your password must be 8-16 characters long and contain
-                        both letters and numbers.</small
-                      >
-                    </label>
+                    <label>Password</label>
+                    <input
+                      class="form-control"
+                      id="register-password-control"
+                      type="password"
+                      name="password"
+                      aria-label="password"
+                      placeholder="Password"
+                      aria-required="true"
+                      required
+                    />
+                    <small class="signup-password-error"></small>
+                    <small
+                      id="register-password-help"
+                      class="form-text text-muted"
+                      >Your password must be 8-16 characters long and contain
+                      both letters and numbers.</small
+                    >
                   </div>
                   <div class="form-group">
-                    <label>
-                      Programme
-                      <select
-                        class="form-control"
-                        id="register-programme-control"
-                        aria-required="true"
-                        required
-                      >
-                        <option value="">
-                          Please select your education or research programme
-                        </option>
-                        <option value="bachelor">Bachelor</option>
-                        <option value="master">Master</option>
-                        <option value="continuing">Continuing education</option>
-                        <option value="doctorate">Doctorate</option>
-                      </select>
-                      <small class="signup-programme-error"></small>
-                    </label>
+                    <label>Programme</label>
+                    <select
+                      class="form-control"
+                      id="register-programme-control"
+                      aria-required="true"
+                      required
+                    >
+                      <option value="">
+                        Please select your education or research programme
+                      </option>
+                      <option value="bachelor">Bachelor</option>
+                      <option value="master">Master</option>
+                      <option value="continuing">Continuing education</option>
+                      <option value="doctorate">Doctorate</option>
+                    </select>
+                    <small class="signup-programme-error"></small>
                   </div>
                 </fieldset>
                 <fieldset class="form-group">
@@ -440,57 +430,49 @@
                     <small class="text-secondary">(optional)</small>
                   </legend>
                   <div class="form-group">
-                    <label>
-                      Street
-                      <input
-                        class="form-control"
-                        id="register-street-control"
-                        type="text"
-                        name="street"
-                        aria-label="street"
-                        placeholder="Street"
-                      />
-                    </label>
+                    <label>Street</label>
+                    <input
+                      class="form-control"
+                      id="register-street-control"
+                      type="text"
+                      name="street"
+                      aria-label="street"
+                      placeholder="Street"
+                    />
                   </div>
                   <div class="form-row">
                     <div class="form-group col-12 col-lg-5">
-                      <label>
-                        City
-                        <input
-                          class="form-control"
-                          id="register-city-control"
-                          type="text"
-                          name="city"
-                          aria-label="city"
-                          placeholder="City"
-                        />
-                      </label>
+                      <label>City</label>
+                      <input
+                        class="form-control"
+                        id="register-city-control"
+                        type="text"
+                        name="city"
+                        aria-label="city"
+                        placeholder="City"
+                      />
                     </div>
                     <div class="form-group col-12 col-lg-4">
-                      <label>
-                        State
-                        <input
-                          class="form-control"
-                          id="register-state-control"
-                          type="text"
-                          name="state"
-                          aria-label="state"
-                          placeholder="State"
-                        />
-                      </label>
+                      <label>State</label>
+                      <input
+                        class="form-control"
+                        id="register-state-control"
+                        type="text"
+                        name="state"
+                        aria-label="state"
+                        placeholder="State"
+                      />
                     </div>
                     <div class="form-group col-12 col-lg-3">
-                      <label>
-                        Zip
-                        <input
-                          class="form-control"
-                          id="register-zip-control"
-                          type="text"
-                          name="zip"
-                          aria-label="zip"
-                          placeholder="Zip"
-                        />
-                      </label>
+                      <label>Zip</label>
+                      <input
+                        class="form-control"
+                        id="register-zip-control"
+                        type="text"
+                        name="zip"
+                        aria-label="zip"
+                        placeholder="Zip"
+                      />
                     </div>
                   </div>
                 </fieldset>
@@ -500,7 +482,7 @@
               </form>
             </div>
           </div>
-        </section>
+        </div>
       </div>
     </main>
 
